# shady-cli

./: Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
shady_cli/: __main__.py  hello.py  mirror.py  todo.py
shady_cli/frontend/: just_for_fun.html
