[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shady-cli"
version = "0.1.0"
description = "A simple CLI for the shady project"
authors = [{name = "Unknown"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["typer>=0.9.0"]

[project.scripts]
shady = "shady_cli.__main__:main"
